feat: 补齐平台治理与 AI Agent 运行时基础能力
本次提交同步此前多轮实现的累计成果，目标是把 DataSmart Govern 从早期模块骨架推进到更接近商用平台的后端基础形态。提交范围覆盖 Java 微服务、Python AI Runtime、网关治理、权限治理、任务治理、数据同步、数据质量、监控告警、数据库迁移、产品路线文档和自动化测试。

新增 agent-runtime Java 微服务：提供 Agent 会话、运行状态、工具注册、工具绑定、工具调用治理、工具执行审计、模型网关、计划摄取、运行时事件消费/投影查询，以及工具执行事件 outbox 与 Kafka 派发基础能力。该模块用于承接类 Codex/Claude Code Agent 的企业级控制面，强调租户、项目、工作区、权限、审计、幂等、状态流转和可观测事件闭环。

新增 python-ai-runtime：提供 FastAPI 入口、意图分析、上下文构建、混合上下文、短期/长期记忆规划、技能注册、工具规划、工具参数校验、模型路由、OpenAI-Compatible Provider、模型工具调用聚合、实时事件记录、回放、checkpoint、outbox、WebSocket 推送和 Java Runtime 桥接能力。该模块保留可替换模型提供商抽象，避免锁死单一模型或旧 Qwen2 基线。

新增 data-sync 独立微服务：沉淀同步模板、同步任务、执行记录、检查点、错误样本、事故记录、审计记录、执行器认领、租约续期、回调幂等、过期租约恢复、运维关注项、数据范围隔离和清理调度等能力，为后续从 datasource-management 中拆出更完整的数据同步产品线打基础。

强化 gateway、permission-admin、task-management、datasource-management、data-quality：补齐内部服务端点保护、权限决策缓存、权限策略变更事件、项目成员治理、任务草稿/审批/队列治理、数据源项目范围隔离、只读 SQL 审计、数据质量规则建议、质量执行报告和执行器协同等能力，并按解耦要求拆分 support/assembler/helper 类降低 Impl 文件膨胀。

补充基础设施与文档：新增 MySQL 迁移脚本、Prometheus 告警规则、Grafana 数据同步看板、Alertmanager 示例配置、AI Agent 技术雷达、数据同步运维 runbook 和平台产品路线图；同时更新 .gitignore 忽略本地 Maven 仓库 .m2，避免依赖缓存进入代码仓库。

验证记录：此前已执行 mvn test -DskipITs -Dmaven.repo.local=D:\Desktop\DataSmart-Govern\DataSmartGovernBackend\.m2 并通过全量模块测试；最近一次 agent-runtime 单模块测试也通过。